# community-watch

./: .env.local.example  QUICK-START.md  README-BLOCKCHAIN.md  README.md  database-complete-migration.sql  database-update.sql  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/governance/: page.tsx
app/identity/: page.tsx
app/map/: page.tsx
app/my-reports/: page.tsx
app/profile/: page.tsx
components/: ai-analysis.tsx  blockchain-report-form.tsx  header-simple.tsx  header.tsx  hero-section.tsx  map-page-content.tsx  map-view.tsx  report-details-client.tsx  report-details-content.tsx  report-form.tsx  report-status-control.tsx  report-status-manager.tsx  reports-feed.tsx  share-button.tsx  sighting-form.tsx  vcon-viewer.tsx
components/ai/: community-assistant.tsx
components/governance/: proposal-form.tsx  proposal-list.tsx
contracts/: Cargo.toml
contracts/community-watch/: Cargo.toml
contracts/community-watch/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: lib.rs
hooks/: use-xion-wallet.ts
lib/: mock-data.ts  types.ts  vcon.ts  xion-client.ts  xion-contracts.ts
lib/supabase/: env.ts
scripts/: 001_create_profiles.sql  002_create_reports.sql  003_create_attachments.sql  004_create_sightings.sql  005_create_sighting_photos.sql  006_align_existing_schema_to_app.sql  apply-migration.js  deploy-contracts.sh  setup-windows.ps1  wallet-setup.md  web-deployment.md  windows-setup.md
(+27 files in other folders)
